--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smart-grocery-list",
+  "name": "lista-de-meracdo-dea",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "gh-pages": "^6.3.0",
+    "jspdf": "^2.5.1",
     "sql.js": "^1.10.3",
     "vite": "^5.0.8",
     "vite-plugin-pwa": "^0.17.4"
